# Retro-C-Snake-Game

./: CMakeLists.txt  README.md  main.cpp
Data/: Data.h
GameManager/: DirectonEnum.h  GameManager.cpp  GameManager.h
GameObjects/: Fruit.cpp  Fruit.h  Snake.cpp  Snake.h
